[package]
name = "terra-rust"
version = "0.1.7"
authors = ["PFC-Validator <PFC-Validator@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/PFC-Validator/terra-rust/"
repository = "https://github.com/PFC-Validator/terra-rust/"
keywords = ["terra", "blockchain"]
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "terra-rust-api",
    "terra-rust-wallet",
]
exclude = [

]

[features]
default = ["native-tls"]
native-tls = ["terra-rust-api/native-tls"]
rustls-tls = ["terra-rust-api/rustls-tls"]

[dependencies]
terra-rust-api = { path = "./terra-rust-api", version = "0.2", default-features = false }
terra-rust-wallet = { path = "./terra-rust-wallet", version = "0.1" }
anyhow="1.0"
async-anyhow-logger = "0.1.0"
tokio = { version = "1.6", features = ["full"] }
structopt = "0.3"
env_logger = "0.8.3"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv="0.15.0"
bitcoin="0.26.0"
serde_json = "1.0"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"
futures="0.3.14"
