[package]
name = "terra-rust"
version = "1.1.3"
authors = ["PFC-Validator <PFC-Validator@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/PFC-Validator/terra-rust/"
repository = "https://github.com/PFC-Validator/terra-rust/"
keywords = ["terra", "blockchain"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
description="CLI for Terra blockchain network, that is multi-platform"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "terra-rust-api",
    "terra-rust-wallet",
]
exclude = [

]

[features]
default = ["native-tls"]
native-tls = ["terra-rust-api/native-tls"]
rustls-tls = ["terra-rust-api/rustls-tls"]

[dependencies]
terra-rust-api = { path = "./terra-rust-api", version = "1.2", default-features = false }
terra-rust-wallet = { path = "./terra-rust-wallet", version = "1.1" }
anyhow="1.0"
#async-anyhow-logger = "0.1.0"
tokio = { version = "1.14.0", features = ["full"] }
structopt = "0.3"
env_logger = "0.8.3"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv="0.15.0"
secp256k1 = { version = "0.20.3", default-features = false }
#bitcoin="0.26.0"
serde_json = "1.0"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"
futures="0.3.14"
# required for example sign_message
base64='0.13.0'
reqwest = { version ="0.11", features=["json"], default-features = false }
