[package]
name = "terra-rust"
version = "1.1.6-alpha.0"
authors = ["PFC-Validator <PFC-Validator@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/PFC-Validator/terra-rust/"
repository = "https://github.com/PFC-Validator/terra-rust/"
keywords = ["terra", "blockchain"]
categories = ["command-line-utilities"]
license = "Apache-2.0"
description="CLI for Terra blockchain network, that is multi-platform"
default-run="terra-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "terra-rust-api",
    "terra-rust-wallet",
    "terra-rust-cli"
]
exclude = [
]

[features]
default = ["native-tls"]
native-tls = ["terra-rust-api/native-tls"]
rustls-tls = ["terra-rust-api/rustls-tls"]


[[bin]]
name="terra-rust"
path= "src/terra_rust.rs"

[[bin]]
name="terra-exec"
path= "src/bin/terra_exec.rs"

[[bin]]
name="terra-query"
path= "src/bin/terra_query.rs"


[dependencies]
terra-rust-api = { path = "./terra-rust-api", version = "1.2", default-features = false }
terra-rust-wallet = { path = "./terra-rust-wallet", version = "1.1" }
terra-rust-cli = { path = "./terra-rust-cli", version = "1.0" }
anyhow="1.0"
tokio = { version = "1.14.0", features = ["full"] }
clap = { version = "3.0.14", features = ["derive","env"] }
env_logger = "0.8.3"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv="0.15.0"
# held back by our use of bitcoin-27. bitcoin-28 upgrades this
secp256k1 = { version = "0.20.3", default-features = false }
serde_json = "1.0"
rust_decimal="1.12.2"
rust_decimal_macros="1.12.2"
futures="0.3.14"
# required for example sign_message
base64='0.13.0'
reqwest = { version ="0.11", features=["json"], default-features = false }
