[package]
name = "terra-rust-cli"
version = "1.0.3"
authors = ["PFC-Validator <PFC-Validator@protonmail.com>"]
edition = "2021"
license = "Apache-2.0"
description="Terra Rust CLI parser"
readme = "README.md"
homepage = "https://github.com/PFC-Validator/terra-rust/tree/main/terra-rust-cli"
repository = "https://github.com/PFC-Validator/terra-rust/"
keywords = ["terra", "blockchain"]
categories = ["api-bindings"]
documentation = "https://docs.rs/terra-rust-cli"

[dependencies]
anyhow="1.0"
thiserror = "1.0"
terra-rust-api = { path = "../terra-rust-api", version = "1.2.2" }
terra-rust-wallet = { path = "../terra-rust-wallet", version = "1.1.1" }

log="0.4"

reqwest = { version ="0.11", features=["json"], default-features = false }
clap={version="3.0.14", features=["env","derive"]}