[package]
name = "terra-rust-wallet"
version = "0.1.1"
authors = ["PFC-Validator <PFC-Validator@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description="Terra Rust API"
readme = "README.md"
homepage = "https://github.com/PFC-Validator/terra-rust/tree/main/terra-rust-wallet"
repository = "https://github.com/PFC-Validator/terra-rust/"
keywords = ["terra", "blockchain"]
categories = ["api-bindings"]
documentation = "https://docs.rs/terra-rust-wallet"

[dependencies]
error-chain = "0.12.4"
terra-rust-api = { path = "../terra-rust-api", version = "0.1" }
bitcoin="0.26.0"
keyring = "0.10.1"
log="0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }